<?xml version="1.0"?>
<package format="2">
  <name>gl3w</name>
  <version>1.0.0</version>
  <description>
  gl3w is the easiest way to get your hands on the functionality offered by the OpenGL core profile specification.
  Packaged for ROS, original from https://github.com/skaslev/gl3w.
  </description>
  <maintainer email="tim.uebelhoer@outlook.de">Tim Übelhör</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>python</build_depend>
  <depend>opengl</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
